crates/rattler_lock/src/utils/snapshots/rattler_lock__utils__derived_fields__test__location_derived_fields-3.snap
---
source: crates/rattler_lock/src/utils/derived_fields.rs
expression: "https://conda.anaconda.org/conda-forge/osx-arm64/x264-1!164.3095-h57fd34a_2.tar.bz2"
---
LocationDerivedFields {
    file_name: Some(
        "x264-1!164.3095-h57fd34a_2.tar.bz2",
    ),
    name: Some(
        "x264",
    ),
    version: Some(
        "1!164.3095",
    ),
    build: Some(
        "h57fd34a_2",
    ),
    subdir: Some(
        "osx-arm64",
    ),
    channel: Some(
        "https://conda.anaconda.org/conda-forge",
    ),
}
