crates/rattler_lock/src/utils/snapshots/rattler_lock__utils__derived_fields__test__location_derived_fields-4.snap
---
source: crates/rattler_lock/src/utils/derived_fields.rs
expression: "file:///packages/win-64/x264-1!164.3095-h57fd34a_2.tar.bz2"
---
LocationDerivedFields {
    identifier: Some(
        DistArchiveIdentifier {
            identifier: ArchiveIdentifier {
                name: "x264",
                version: "1!164.3095",
                build_string: "h57fd34a_2",
            },
            archive_type: Conda(
                TarBz2,
            ),
        },
    ),
    name: Some(
        "x264",
    ),
    version: Some(
        "1!164.3095",
    ),
    build: Some(
        "h57fd34a_2",
    ),
    subdir: None,
    channel: None,
}
