crates/rattler_lock/src/utils/snapshots/rattler_lock__utils__derived_fields__test__location_derived_fields-5.snap
---
source: crates/rattler_lock/src/utils/derived_fields.rs
expression: "../source/win-64/package-1.0.0-0.tar.bz2"
---
LocationDerivedFields {
    file_name: Some(
        "package-1.0.0-0.tar.bz2",
    ),
    name: Some(
        "package",
    ),
    version: Some(
        "1.0.0",
    ),
    build: Some(
        "0",
    ),
    subdir: None,
    channel: None,
}
