crates/rattler_lock/src/utils/snapshots/rattler_lock__utils__derived_fields__test__location_derived_fields-7.snap
---
source: crates/rattler_lock/src/utils/derived_fields.rs
expression: "../source/win-64/"
---
LocationDerivedFields {
    identifier: None,
    name: None,
    version: None,
    build: None,
    subdir: None,
    channel: None,
}
